[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = "find:"

[tool.poetry]
name = "great-limiter"
version = "0.1"
description = ""
authors = ["Michael Hernandez"]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.4"